# fastcdr-release

./: 0001-Set-APPEND_PROJECT_NAME_TO_INCLUDEDIR-to-ON.patch  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
dashing/: package.xml
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
rpm/: ros-galactic-fastcdr.spec  ros-humble-fastcdr.spec  ros-rolling-fastcdr.spec  template.spec  template.spec.em
xenial/: package.xml
